// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-desktop 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-lg border border-gray-200 p-4 mb-4 sm:p-6"
    style="width: 1280px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-700 mb-2"
          for="search"
        >
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-mobile 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-lg border border-gray-200 p-4 mb-4 sm:p-6"
    style="width: 375px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-700 mb-2"
          for="search"
        >
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-tablet 1`] = `
<DocumentFragment>
  <div
    class="bg-white rounded-lg border border-gray-200 p-4 mb-4 sm:p-6"
    style="width: 768px;"
  >
    <div
      class="space-y-4"
    >
      <div>
        <label
          class="block text-sm font-bold text-gray-700 mb-2"
          for="search"
        >
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="bg-white rounded-md border border-gray-100 p-4"
          >
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
              max="2025"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
